After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696677 - Opening a link from an external application does not honor the new-windows-in-tabs setting
Opening a link from an external application does not honor the new-windows-in...
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-27 09:34 UTC by Philippe Normand
Modified: 2015-11-10 14:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: Open links in active window instead of guessing the main window (2.86 KB, patch)
2015-11-06 11:23 UTC, Carlos Garcia Campos
committed Details | Review

Description Philippe Normand 2013-03-27 09:34:15 UTC
Steps to reproduce:

- start Web
- from another workspace, in a external application, like an Empathy chat window, click on a http:// link
- a new Web window appears on current workspace

Expected behavior:

- if the new-windows-in-tabs setting is on the link should be opened in the existing Web window
- perhaps a notification could be created and activating it would switch to Web window (this is what Chromium does)
Comment 1 Mattias Eriksson 2014-03-27 07:54:57 UTC
I can confirm that this behavior is also present in 3.12. This makes using Web as a default browser feel a little less polished.
Comment 2 Manuel Rego Casasnovas 2015-11-06 09:12:21 UTC
JFYI, this is still happening in 3.18. It'd be really nice to get it fixed.
Comment 3 Carlos Garcia Campos 2015-11-06 11:23:46 UTC
Created attachment 314974 [details] [review]
shell: Open links in active window instead of guessing the main window

This is because ephy considers the main window the one in the current workspace with more tabs. I think it would be simpler to always use the active window (which is the last recently used one, even if it's currently unfocused). This will likely be the main one, or the one we want the links in.
Comment 4 Michael Catanzaro 2015-11-06 19:59:32 UTC
Review of attachment 314974 [details] [review]:

OK, but I predict complaints if we do this.
Comment 5 Carlos Garcia Campos 2015-11-07 08:20:06 UTC
(In reply to Michael Catanzaro from comment #4)
> Review of attachment 314974 [details] [review] [review]:
> 
> OK, but I predict complaints if we do this.

That's a prediction, but we already have real complains for not doing this :-) I don't mind either behaviour since I don't use the open links in tabs option at all.
Comment 6 Carlos Garcia Campos 2015-11-10 14:45:35 UTC
Comment on attachment 314974 [details] [review]
shell: Open links in active window instead of guessing the main window

Pushed.