shell: Open links in active window instead of guessing the main window

Remove ephy_shell_get_main_window() and use
gtk_application_get_active_window() instead when opening links in a new
tab from a remote instance.

https://bugzilla.gnome.org/show_bug.cgi?id=696677